fix wrong width change

--- a/src/components/SettingBox/SettingBox.module.scss
+++ b/src/components/SettingBox/SettingBox.module.scss
@@ -1,7 +1,7 @@
 .container {
   position: absolute;
   min-height: 50px;
-  width: 150px;
+  min-width: 150px;
   background: white;
   z-index: 20;
   right: 10px;
